<resources>
    <string name="app_name">My Shop Pal</string>
    <string name="my_shop_pal">My shop pal</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please wait…</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_submit">submit</string>
    <string name="forgot_password_text">Enter your e-mail address we\'ll send you a email to reset your password</string>
    <string name="successfully_sent_email">Email sent successfully to reset your password!</string>
    <string name="success_register">You are registered successfully.</string>
    <string name="error_message">Error while registering the user.</string>
    <string name="error_updating_message">Error while updating the user.</string>

    <string name="title_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="err_msg_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="products_title">Products</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="orders_title">Orders</string>
    <string name="sold_products_title">Sold products</string>
    <string name="settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_complete_profile">Complete user profile</string>
    <string name="add_your_product">Add your product</string>
    <string name="add_product">Add product</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price ($)</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Product Quantiy</string>
    <string name="btn_add_product_text">Submit</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="no_products_added_yet">No products added yet</string>

    <string name="no_dashboard_item_found">No items found.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_success">The product was successfully deleted.</string>

    <string name="delete_dialog_message">Are you sure you want to delete product %1$s?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="title_product_details">Product details</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="added_to_cart">Product was added to your cart</string>
    <string name="my_cart">My cart</string>

    <string name="title_my_cart">My cart</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="out_of_stock">OUT OF STOCK</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>

    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address was added successfully.</string>

    <string name="title_edit_address">Edit address</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>

    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>

    <string name="title_select_address">Select address</string>
    <string name="address_list">Address list</string>
    <string name="add_address">Add address</string>

    <string name="title_checkout">Checkout</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>

    <string name="no_orders_placed_yet">No orders placed yet.</string>
    <string name="image_button_increase_amount">image_button_increase_amount</string>
    <string name="image_button_decrease_amount">image_button_decrease_amount</string>

    <string name="title_my_order_details">My order details</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">Sold product details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>