<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.android10_kotlin.myshoppal.ui.fragments.home.ProductsFragment"
        android:label="@string/products_title"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android10_kotlin.myshoppal.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.android10_kotlin.myshoppal.ui.fragments.notifications.OrdersFragment"
        android:label="@string/orders_title"
        tools:layout="@layout/fragment_orders" />

</navigation>