<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".ui.activities.AddressListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address_list_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/app_gradient_color_background_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/container"
        app:titleMarginEnd="500dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/address_list"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.android10_kotlin.myshoppal.utils.MSPTextView
        android:id="@+id/tv_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_add_address_margin"
        android:background="@drawable/item_primary_color_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/btn_add_address_padding"
        android:text="@string/lbL_add_address"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/add_address_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_address_list_activity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rv_address_list_marginTop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address" />

    <com.android10_kotlin.myshoppal.utils.MSPTextView
        android:id="@+id/tv_no_address_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_address_found"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address" />

</androidx.constraintlayout.widget.ConstraintLayout>